--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=tpractico1
 # Configuración de la base de datos H2 en memoria
 spring.datasource.url=jdbc:h2:mem:productosdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=root
 
 # Configuración de JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
